# calculator-interface-demos

./: README.rst  pyproject.toml
calculator/: api.py  cli.py  cli1.py  core.py  gui.py  repl.py
