[tool.poetry]
name = "calculator"
version = "0.1.0"
description = ""
authors = ["Catherine Devlin <catherine.devlin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
flet = "^0.2.4"
fastapi = {extras = ["all"], version = "^0.88.0"}
textual = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.7.0"
black = "^22.12.0"
isort = "^5.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
calc1 = 'calculator.cli:main'
calc = 'calculator.cli:main'
calc-repl = 'calculator.repl:main'
calc-gui = 'calculator.gui:run'
calc-web = 'calculator.gui:web'

# uvicorn calculator.api:api